Bug 1015618 - Fix a performance regression in MapObject with GGC enabled; r=jonco